testsuite/tests/properties/invalid_symbol/correct.lkt
import common

class Example: FooNode implements TokenNode {
    @export fun p(): Symbol = node.symbol
}
